--- a/Dashboard_MilkStore/Views/_ViewImports.cshtml
+++ b/Dashboard_MilkStore/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using Dashboard_MilkStore
 @using Dashboard_MilkStore.Models
+@using Dashboard_MilkStore.Models.Common
+@using Dashboard_MilkStore.Models.Voucher
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
